--- a/copy/vue/tsconfig.json
+++ b/copy/vue/tsconfig.json
@@ -11,7 +11,11 @@
 		"noEmit": true,
 		"jsx": "preserve",
 		"strict": true,
-		"types": ["vite/client"]
+		"types": ["vite/client"],
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"]
+		}
 	},
 	"include": ["src/**/*", "env.d.ts"]
 }
