--- a/copy/vue/package.json
+++ b/copy/vue/package.json
@@ -20,6 +20,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"axios": "^1.12.2",
 		"pinia": "^2.3.1",
 		"vue": "^3.3.4",
 		"vue-router": "^4.4.0"
