--- a/copy/vue/package.json
+++ b/copy/vue/package.json
@@ -20,7 +20,14 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.2",
+		"@tiptap/extension-image": "^3.7.2",
+		"@tiptap/extension-link": "^3.7.2",
+		"@tiptap/html": "^3.7.2",
+		"@tiptap/starter-kit": "^3.7.2",
+		"@tiptap/vue-3": "^3.7.2",
 		"axios": "^1.12.2",
+		"element-plus": "^2.11.5",
 		"pinia": "^2.3.1",
 		"vue": "^3.3.4",
 		"vue-router": "^4.4.0"
